syntax = "proto3";

package client;
option go_package = "github.com/oasislabs/ekiden/go/grpc/client";

service Runtime {
    // Submit a transaction to leader.
    rpc SubmitTx (SubmitTxRequest) returns (SubmitTxResponse) {}
    // Wait for the node to finish syncing.
    rpc WaitSync (WaitSyncRequest) returns (WaitSyncResponse) {}
    // Check if the node is finished syncing.
    rpc IsSynced (IsSyncedRequest) returns (IsSyncedResponse) {}
}

message SubmitTxRequest {
    // Encoded transaction.
    bytes data = 1;
    // Runtime identifier.
    bytes runtime_id = 2;
}

message SubmitTxResponse {
	bytes result = 1;
}

message WaitSyncRequest {}

message WaitSyncResponse {}

message IsSyncedRequest {}

message IsSyncedResponse {
	// True if the node finished the initial sync.
	bool synced = 1;
}
